daikoku/javascript/src/style/components/pricingCard.scss
@use "../variables";

.usage-plan__card {
  position: relative;
  background-color: variables.$level3_bg-color;
  border-radius: 1rem;

  width: calc(25% - 15px);

  display: flex;
  flex-direction: column;

  .dropdown-menu-button {
    color: variables.$card-header-bg-color;

    &:hover {
      color: color-mix(in srgb, var(--card-header-bg-color, #404040), white 30%);
    }
  }

  .usage-plan__card__header {
    padding: 1rem 1rem 1.5rem 1rem;
    border-bottom: 1px solid variables.$level2_text-color;

    display: flex;
    flex-direction: column;

    height: 200px;

    .usage-plan__card__title {
      font-weight: bold;
      padding-bottom: 1rem;
      font-size: 1.5rem;
    }

    .usage-plan__card__description {
      font-weight: lighter;
      font-size: 1rem;
    }

    .usage-plan__card__action-button {
      align-self: flex-end;

      margin: 5px 10px;
      width: 100%;
      background-color: variables.$card-header-bg-color;
      color: variables.$card-header-text-color;
      border: 1px solid variables.$level2_text-color;
      border-radius: 5px;
      padding: 10px;

      position: relative;

      &:hover {
        color: variables.$card-header-bg-color;
        background-color: variables.$card-header-text-color;

        box-shadow: 3px 3px 0 variables.$card-header-bg-color;
      }

      &.inactive {
        pointer-events: none;

        &::before {
          content: "";
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          background: rgba(255, 255, 255, 0.2);
        }
      }

      &:focus,
      &:active {
        color: variables.$card-header-bg-color;
        background-color: variables.$card-header-text-color;
        box-shadow: 1px 1px 0 variables.$card-header-bg-color;
        transform: translate(2px, 2px);
      }
    }
  }

  .usage-plan__card__body {
    flex: 1;
    padding: 0rem 1rem .5rem 1rem;

    .usage-plan__card__action-button {
      align-self: flex-end;

      // margin: 5px 10px;
      width: 100%;
      background-color: variables.$card-header-bg-color;
      color: variables.$card-header-text-color;
      border: 1px solid variables.$level2_text-color;
      border-radius: 5px;
      padding: .5rem;

      position: relative;

      display: flex;
      justify-content: center;

      width: fit-content;

      &:hover {
        color: variables.$card-header-bg-color;
        background-color: variables.$card-header-text-color;

        box-shadow: 3px 3px 0 variables.$card-header-bg-color;
      }

      &.inactive {
        cursor: not-allowed;

        &::before {
          content: "";
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          background: rgba(255, 255, 255, 0.2);
        }
      }

      &:focus,
      &:active {
        color: variables.$card-header-bg-color;
        background-color: variables.$card-header-text-color;
        box-shadow: 1px 1px 0 variables.$card-header-bg-color;
        transform: translate(2px, 2px);
      }
    }



    .usage-plan__card__feature {
      padding-bottom: .5rem;
      margin-top: 1rem;

      display: flex;
      justify-content: space-between;
      align-items: center;

      &:last-child {
        border: none;
        padding-bottom: 0;
      }

      h4 {
        font-weight: bold;
        font-size: 1rem;
        margin-bottom: 0;
      }

      .feature__description {
        font-size: .9rem;
        text-wrap: wrap;
      }

      .edition-icon {
        display: none;
      }

      &:hover {
        cursor: pointer;

        h4 {
          text-decoration: underline;
        }

        .edition-icon {
          display: block;
        }
      }

      &.no-decoration {
        cursor: default !important;

        h4 {
          text-decoration: none !important;
        }
      }
    }


  }
}

@media screen and (max-width: 1350px) {
  .usage-plan__card {
    width: calc(33% - 20px);
  }
}

@media screen and (max-width: 1100px) {
  .usage-plan__card {
    width: calc(50% - 10px);
  }
}

@media screen and (max-width: 850px) {
  .usage-plan__card {
    width: 100%;
  }
}

